--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <input maxlength="3" placeholder="123">
                     </div>
                 </div>
-                <input class="sumbit" type="submit" value="adicionar"/>
+                <input class="submit" type="submit" value="adicionar"/>
             </form>
         </div>
     </div>
